# nltk_data_pack

./: .gitmodules  Makefile  README.md  pyproject.toml  versions
scripts/: index-xml-to-json.py  read_xml.ipynb
src/nltk_data_pack/: __init__.py  configure.py
