[project]
name = "nltk-data-pack"
version = "0.1.0.dev1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nltk>=3.9.1",
    "nltk-data-pack-core",
    "pydantic>=2.11.7",
]

[project.optional-dependencies]
abc = [ "nltk-data-abc" ]
spanish-grammars = [ "nltk-data-spanish-grammars" ]

[tool.uv.sources]
nltk-data-abc = { workspace = true }
nltk-data-spanish-grammars = { workspace = true }
nltk-data-pack-core = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

